<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.PlayerStatsFragment"
    android:background="@color/background"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_marginBottom="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <include
            android:id="@+id/playerstats"
            layout="@layout/item_playerstats" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            class="androidx.appcompat.app.AlertController$RecycleListView"
            android:layout_width="match_parent"
            android:layout_height="164dp"
            tools:listitem="@layout/item_match"
            android:id="@+id/matches_recycler_view">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/show_all"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/button_show_all"
            android:textColor="@color/buttonTextColor"
            android:background="@drawable/button_background"
            android:fontFamily="@font/inter_extrabold"
            android:layout_marginTop="4dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            class="androidx.appcompat.app.AlertController$RecycleListView"
            android:layout_width="match_parent"
            android:layout_height="188dp"
            tools:listitem="@layout/item_comment"
            android:id="@+id/comments_recycler_view" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>