<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.ui.fragments.SearchFragment">

    <ImageView
        android:id="@+id/lupa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.33"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bigblackhalftransparentsearch" />

    <EditText
        android:id="@+id/search_bar"
        android:maxLength="12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/search_tv1"
        android:fontFamily="@font/inter"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:alpha="0.50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lupa" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_player_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_btn"
            android:textColor="@color/buttonTextColor"
            app:cornerRadius="10dp"
            android:layout_margin="4dp"
            android:fontFamily="@font/inter_extrabold"
            app:backgroundTint="@color/buttonBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_bar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_match_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/match_btn"
            android:textColor="@color/buttonTextColor"
            android:layout_margin="4dp"
            app:cornerRadius="10dp"
            android:fontFamily="@font/inter_extrabold"
            app:backgroundTint="@color/buttonBackground"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_bar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>