<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.MatchStatsFragment"
    android:background="@color/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <include
            android:id="@+id/match_briefing"
            layout="@layout/item_match_briefing" />

        <androidx.recyclerview.widget.RecyclerView
            android:isScrollContainer="true"
            class="androidx.appcompat.app.AlertController$RecycleListView"
            android:layout_width="match_parent"
            android:minHeight="250dp"
            android:layout_height="0dp"
            tools:listitem="@layout/item_match_player"
            android:id="@+id/radiant_team_recycler_view"
            android:layout_weight="53">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.recyclerview.widget.RecyclerView

            android:isScrollContainer="true"
            class="androidx.appcompat.app.AlertController$RecycleListView"
            android:layout_width="match_parent"
            android:minHeight="250dp"
            android:layout_height="0dp"
            tools:listitem="@layout/item_match_player"
            android:id="@+id/dire_team_recycler_view"
            android:layout_weight="53" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>