<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/favouritesFragment"
        android:title="@string/menu_favs"
        android:icon="@drawable/ic_star" />
    <item android:id="@+id/searchFragment"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search" />
    <item android:id="@+id/settingsFragment"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings" />

</menu>